# NFL-Predictor

./: .gitignore  main.py  nfl_2025_week7_predictions_Gradient Boosting.csv  nfl_2025_week7_predictions_Random Forest.csv  nfl_2025_week7_predictions_XGBoost.csv  nfl_game_dataset.csv  nfl_predictions_client.py  nfl_predictor.py  pyproject.toml
models/: ml_model_packages.py  predictions.py
old csvs/: NFL_2025_week8_home_spread_covered_predictions_by_random_forest_20251026.csv  NFL_2025_week8_home_spread_covered_predictions_by_xgboost_20251026.csv  NFL_2025_week8_home_win_predictions_by_random_forest_20251026.csv  NFL_2025_week8_home_win_predictions_by_xgboost_20251026.csv  nfl_2025_week7_spread_predictions_Random Forest.csv  nfl_2025_week7_spread_predictions_XGBoost.csv  nfl_game_dataset.csv  nfl_game_dataset_20251026.csv
